fix private channel scrollbar, added ChatView component

--- a/src/index.css
+++ b/src/index.css
@@ -133,10 +133,6 @@
 	src: url(./fonts/1cce82154216dc3cb04a84d011ce1201.woff2) format("woff2"), url(./fonts/746a4f241e03deffc59b08c5650cf458.woff) format("woff")
 }
 
-.scrollbar::-webkit-scrollbar-thumb {
-		background-clip: padding-box;
-		border: 2px solid transparent;
-		border-radius: 4px;
-		background-color: #202225;
-		min-height: 40px;
+.test:not(:placeholder-shown) {
+	width: 144px;
 }
